start with domain model

--- a/src/YellowCarRental.Frontend.CallCenter/YellowCarRental.Frontend.CallCenter/Components/Account/Pages/Login.razor
+++ b/src/YellowCarRental.Frontend.CallCenter/YellowCarRental.Frontend.CallCenter/Components/Account/Pages/Login.razor
@@ -3,7 +3,7 @@
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
-@using YellowCarRental.Frontend.CallCenter.Data
+@using SmartSolutionsLab.YellowCarRental.Frontend.CallCenter.Data
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject ILogger<Login> Logger
