--- a/src/YellowCarRental.Frontend.CallCenter/YellowCarRental.Frontend.CallCenter/Components/Account/Pages/ConfirmEmailChange.razor
+++ b/src/YellowCarRental.Frontend.CallCenter/YellowCarRental.Frontend.CallCenter/Components/Account/Pages/ConfirmEmailChange.razor
@@ -3,7 +3,7 @@
 @using System.Text
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using YellowCarRental.Frontend.CallCenter.Data
+@using SmartSolutionsLab.YellowCarRental.Frontend.CallCenter.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
