--- a/src/YellowCarRental.Frontend.Public/YellowCarRental.Frontend.Public.Client/_Imports.razor
+++ b/src/YellowCarRental.Frontend.Public/YellowCarRental.Frontend.Public.Client/_Imports.razor
@@ -6,4 +6,4 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using YellowCarRental.Frontend.Public.Client
+@using SmartSolutionsLab.YellowCarRental.Frontend.Public.Client
