--- a/src/YellowCarRental.Frontend.Public/YellowCarRental.Frontend.Public/Components/_Imports.razor
+++ b/src/YellowCarRental.Frontend.Public/YellowCarRental.Frontend.Public/Components/_Imports.razor
@@ -6,6 +6,8 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using MudBlazor
+@using MudBlazor.Services
 @using SmartSolutionsLab.YellowCarRental.Frontend.Public
 @using SmartSolutionsLab.YellowCarRental.Frontend.Public.Client
 @using SmartSolutionsLab.YellowCarRental.Frontend.Public.Components
