--- a/src/YellowCarRental.Frontend.Shared.Components/Layout/MainLayout.razor
+++ b/src/YellowCarRental.Frontend.Shared.Components/Layout/MainLayout.razor
@@ -1,5 +1,4 @@
-﻿@using MudBlazor
-@inherits LayoutComponentBase
+﻿@inherits LayoutComponentBase
 
 <MudThemeProvider Theme="@_theme" IsDarkMode="_isDarkMode"/>
 <MudPopoverProvider/>
