--- a/src/YellowCarRental.Frontend.Shared.Components/_Imports.razor
+++ b/src/YellowCarRental.Frontend.Shared.Components/_Imports.razor
@@ -1,3 +1,4 @@
-﻿
+﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Routing
 @using MudBlazor
+@using SmartSolutionsLab.YellowCarRental.Frontend.Shared.Components.Models
