--- a/src/YellowCarRental.Frontend.Public/YellowCarRental.Frontend.Public.Client/Routes.razor
+++ b/src/YellowCarRental.Frontend.Public/YellowCarRental.Frontend.Public.Client/Routes.razor
@@ -1,10 +1,11 @@
 ﻿@using Microsoft.AspNetCore.Components
+@using SmartSolutionsLab.YellowCarRental.Frontend.Shared.Components.Layout
 
 <Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
         <CascadingValue Name="AppTitle" Value="Title">
             <CascadingValue Name="NavContent" Value="Nav">
-                <RouteView RouteData="routeData" DefaultLayout="typeof(SmartSolutionsLab.YellowCarRental.Frontend.Shared.Components.Layout.MainLayout)"/>
+                <RouteView RouteData="routeData" DefaultLayout="typeof(MainLayout)"/>
                 <FocusOnNavigate RouteData="routeData" Selector="h1"/>
             </CascadingValue>
         </CascadingValue>
@@ -12,7 +13,7 @@
 </Router>
 
 @code {
-    private const string Title = "🚗 Yellow Car Rental";
+    private const string Title = "Yellow Car Rental";
 
     private RenderFragment Nav => __builder =>
     {
