--- a/src/YellowCarRental.Frontend.Shared.Components/Layout/MainLayout.razor
+++ b/src/YellowCarRental.Frontend.Shared.Components/Layout/MainLayout.razor
@@ -39,7 +39,7 @@
     [CascadingParameter(Name = "AppTitle")] public string? Title { get; set; }
 
     private bool _drawerOpen = true;
-    private bool _isDarkMode = true;
+    private bool _isDarkMode = false;
 
 
     private MudTheme _theme = new MudTheme
