--- a/src/YellowCarRental.Frontend.CallCenter/YellowCarRental.Frontend.CallCenter.Client/Layout/ClientNavMenu.razor
+++ b/src/YellowCarRental.Frontend.CallCenter/YellowCarRental.Frontend.CallCenter.Client/Layout/ClientNavMenu.razor
@@ -1,11 +1,18 @@
 ﻿<MudNavMenu>
-    <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
+    @*<MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
     <MudNavLink Href="counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Counter</MudNavLink>
     <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>
     <MudDivider Class="my-2" />
     <MudNavLink Href="calls" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Call">Calls</MudNavLink>
     <MudNavLink Href="agents" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.SupportAgent">Agents</MudNavLink>
-    <MudNavLink Href="Bookings" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.SupportAgent">Bookings</MudNavLink>
+    
+    Call center *@
+      
+    <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
+    <MudNavLink Href="Vehicles" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.DirectionsCar">Fahrzeugsuche</MudNavLink>
+    <MudNavLink Href="Register" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AppRegistration">Anmeldung</MudNavLink>
+    <MudNavLink Href="Book" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AddBusiness">Buchung</MudNavLink>
+    <MudNavLink Href="Bookings" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.DirectionsCar">Meine Buchung</MudNavLink>
     
     
 </MudNavMenu>
