--- a/src/YellowCarRental.Frontend.Public/YellowCarRental.Frontend.Public.Client/Layout/ClientNavMenu.razor
+++ b/src/YellowCarRental.Frontend.Public/YellowCarRental.Frontend.Public.Client/Layout/ClientNavMenu.razor
@@ -1,9 +1,17 @@
 ﻿<MudNavMenu>
-    <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
+    @*<MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
     <MudNavLink Href="counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Counter</MudNavLink>
     <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>
     <MudDivider Class="my-2" />
     <MudNavLink Href="reservations" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Event">Reservations</MudNavLink>
     <MudNavLink Href="vehicles" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.DirectionsCar">Vehicles</MudNavLink>
+    
+    // Normal*@
+    
+    <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
+    <MudNavLink Href="Vehicles" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.DirectionsCar">Fahrzeugsuche</MudNavLink>
+    <MudNavLink Href="Register" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AppRegistration">Anmeldung</MudNavLink>
+    <MudNavLink Href="Book" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AddBusiness">Buchung</MudNavLink>
+    <MudNavLink Href="Bookings" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.DirectionsCar">Meine Buchung</MudNavLink>
 </MudNavMenu>
 
