refactoring and Ef stuff

--- a/src/YellowCarRental.Frontend.CallCenter/YellowCarRental.Frontend.CallCenter.Client/Pages/VehicleSearch.razor
+++ b/src/YellowCarRental.Frontend.CallCenter/YellowCarRental.Frontend.CallCenter.Client/Pages/VehicleSearch.razor
@@ -1,5 +1,4 @@
-﻿@page "/"
-@page "/vehicles"
+﻿@page "/vehicles"
 
 @using SmartSolutionsLab.YellowCarRent.Frontend.ApiClient
 @using SmartSolutionsLab.YellowCarRental.Application.Contracts.Station
